--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.81.0"
+  },
+  "dependencies": {
+    "nodemailer": "^6.9.16"
   }
 }
